# unified-documentation-server

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml
config/: doc_types.example.yaml  document-types.example.yml  sources.example.yaml
docs/: architecture.md  operations.md
docs/adr/: 0001-chroma-sidecar.md  0002-ingestion-subprocess.md  0003-chat-model-startup-probe.md  0004-hybrid-search-pipeline.md  README.md
journal/: 260322-add-cicd-workflow.md  260324-fetch-reset-sync.md  260324-readme-ingestion-and-tree-api.md  260324-rest-api-for-web-ui.md  260328-chat-self-awareness-and-ingestion-status-tool.md  260328-pdf-file-support.md  260329-sync-diagnostics-and-url-drift-fix.md  260403-per-source-health-status.md  260407-token-efficiency-optimizations.md  260424-docker-image-size-optimization.md  260425-chat-agent-date-and-model-upgrade.md  260426-fix-invalid-opus-model-id.md  260429-engineering-team-ops-hardening.md  260429-ingestion-subprocess-and-chroma-sidecar.md  260505-ingestion-efficiency-30min-cadence.md  260507-embedding-batch-size.md  260507-health-liveness-and-conversations-cap.md  260507-oom-mitigation-and-subprocess-isolation.md  260509-rescan-status-fields-for-ui-button.md  260509-scan-progress-events.md  260510-hybrid-search-pipeline.md  260513-doc-types-and-exclude.md  260513-folder-tree-endpoints.md  260515-backend-followups-bookmarks-type-and-worker-classifier.md  260516-document-types-rename-and-prod-bind-mount.md  260518-journal-tab-fix.md  260519-expose-source-repo-url.md  260519-fast-local-dev-no-ingest.md  260519-source-files-line-count.md
src/docserver/: __main__.py  bookmarks.py  config.py  conversations.py  embedding.py  ingestion.py  ingestion_supervisor.py  ingestion_worker.py  knowledge_base.py  logging_config.py  reranker.py  server.py
tests/: test_chat_endpoint.py  test_chat_prompt.py  test_config.py  test_conversations.py  test_doc_types_config.py  test_embedding.py  test_ingestion.py  test_ingestion_supervisor.py  test_ingestion_worker.py  test_knowledge_base.py  test_logging.py  test_reranker.py  test_server.py
