[project]
name = "unified-documentation-server"
version = "0.1.0"
description = "MCP server that indexes documentation from git repos and serves it to AI agents"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.22.0,<2",
    "chromadb>=1.5.8,<2",
    "onnxruntime>=1.25.1,<2",
    "tokenizers>=0.23.1",
    "huggingface-hub>=1.13.0",
    "gitpython>=3.1.41,<4",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0,<4",
    "anthropic>=0.97.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0",
    "ruff>=0.15.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docserver"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=docserver --cov-report=term-missing"

[tool.coverage.run]
source = ["src/docserver"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]

[tool.ruff]
target-version = "py313"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["docserver"]

[tool.ruff.format]
quote-style = "double"
